src/test/deca/test_compilateur/syntax/valid/created/double_semi_ended_instruction.deca
// Description :
//    test expression vide
//
// Resultats :
//		Ok


{
int i = 0;;
}
