src/test/deca/test_compilateur/syntax/invalid/created/class/met_missing_indent_met.deca
// Description :
//    appel methode avec l'identificateur de methode manquant
//
// Resultats :
//		Syntaxe error

{
int a = a.();
}